# cadenza

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  mise.toml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: daemon.yml  web.yml
apps/cadenza-daemon/: Cargo.toml  project.json
apps/cadenza-daemon/src/: audio.rs  instrument.rs  main.rs  server.rs  synth.rs
apps/cadenza-daemon/src/host/: clap_backend.rs  mod.rs  vst3_backend.rs
apps/cadenza-daemon/tests/fixtures/gain.vst3/Contents/MacOS/: gain
apps/cadenza-shell/: Cargo.toml  build.rs  tauri.conf.json
apps/cadenza-shell/capabilities/: default.json
apps/cadenza-shell/src/: main.rs  supervisor.rs
apps/cadenza-web/: .env.example  package.json  playwright.config.ts  project.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/cadenza-web/src/: app.html
apps/cadenza-web/src/routes/: +page.svelte
apps/cadenza-web/src/routes/api/compose/: +server.ts
apps/cadenza-web/tests/e2e/: smoke.spec.ts
crates/cadenza-midi/: Cargo.toml
crates/cadenza-midi/src/: error.rs  file.rs  lib.rs  reader.rs  writer.rs
crates/cadenza-musicxml/: Cargo.toml
crates/cadenza-musicxml/src/: lib.rs  renderer.rs  score.rs
crates/cadenza-theory/: Cargo.toml
crates/cadenza-theory/src/: chord.rs  interval.rs  lib.rs  phrase.rs  pitch.rs  rhythm.rs  scale.rs
crates/cadenza-wasm/: Cargo.toml
crates/cadenza-wasm/src/: exports.rs  lib.rs  parse.rs  session.rs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts
web/src/api/: compose.ts  export.ts  wasm-bridge.ts
web/src/context/: session.ts
web/src/types/: index.ts
