[workspace]
resolver = "2"
members = [
  "packages/cadenza-theory",
  "packages/cadenza-midi",
  "packages/cadenza-musicxml",
  "packages/cadenza-wasm",
  "packages/cadenza-ipc",
  "apps/cadenza-daemon",
  "apps/cadenza-shell",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Shawnee Smart Systems LLC"]
license     = "MIT"
repository  = "https://github.com/shawnee-smart-systems/cadenza"

[workspace.dependencies]
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
thiserror      = "1"
wasm-bindgen   = "0.2"
js-sys         = "0.3"
