[package]
name        = "cadenza-daemon"
description = "Native audio/VST host daemon for Cadenza"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cadenza-daemon"
path = "src/main.rs"

[features]
default = ["clap-host", "vst3-host"]

# Enables tests that open a real audio output device. Off by default so
# `cargo test -p cadenza-daemon` is safe to run on headless CI runners.
# Enable locally with `cargo test -p cadenza-daemon --features audio-device-tests`.
audio-device-tests = []

# Real CLAP plugin hosting via clack-host. On by default. Compile out with
# `--no-default-features` for headless builds that don't need plugin hosting.
clap-host = ["dep:clack-host", "dep:clack-extensions"]

# Loads the committed nih-plug `gain` example .clap binary at
# `tests/fixtures/gain.clap` and verifies it loads, activates, and processes
# a buffer through clack-host. Requires `clap-host`. Off by default.
clap-host-tests = ["clap-host"]

# Real VST3 plugin hosting via the `vst3` crate (coupler-rs/vst3-rs).
# On by default. Compile out with `--no-default-features` for headless
# builds that don't need plugin hosting.
vst3-host = ["dep:vst3", "dep:libloading"]

# Loads the committed nih-plug `gain` example .vst3 bundle at
# `tests/fixtures/gain.vst3` and verifies it loads, instantiates, sets
# up processing, and runs a process() block. Requires `vst3-host`.
# Off by default for the same reasons as `clap-host-tests`.
vst3-host-tests = ["vst3-host"]

[dependencies]
cadenza-theory = { path = "../../packages/cadenza-theory", features = ["std"] }
cadenza-ipc    = { path = "../../packages/cadenza-ipc" }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }

tokio          = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
axum           = { version = "0.7", features = ["ws"] }
futures-util   = "0.3"
cpal           = "0.15"
ringbuf        = "0.4"
crossbeam-channel = "0.5"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Real CLAP plugin hosting. Pinned to a specific commit on prokopyl/clack
# because clack-host is not yet published to crates.io. The pin gives us
# byte-reproducible builds; bump this hash deliberately when we want a
# clack update. License: MIT OR Apache-2.0. MSRV inside the dep is 1.85.
clack-host = { git = "https://github.com/prokopyl/clack.git", rev = "4541f03792635dfdc6be9441a01b786e9b4ccf18", optional = true }

# Plugin parameter extension definitions for the CLAP host. Pinned to the
# same revision as `clack-host` so the trait/extension impls match. The
# `params` feature gates the parameter extension; `clack-host` enables the
# host-side helpers (count/get_info/get_value).
clack-extensions = { git = "https://github.com/prokopyl/clack.git", rev = "4541f03792635dfdc6be9441a01b786e9b4ccf18", features = ["params", "clack-host"], optional = true }

# Real VST3 plugin hosting via coupler-rs/vst3-rs. Raw FFI bindings to
# the VST3 SDK plus COM smart pointers — no high-level host wrapper, so
# the host glue in `src/host/vst3_backend.rs` is hand-written. License:
# MIT OR Apache-2.0. The original Phase 5b plan called for `vst3-sys`,
# which is unpublished and unmaintained as of mid-2023. The `vst3` crate
# was the live alternative as of April 2026.
vst3       = { version = "0.3.0", optional = true }
libloading = { version = "0.8", optional = true }

[dev-dependencies]
tokio-tungstenite = "0.24"
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tempfile           = "3"
